Make output consistent #381