@@ -9,203 +9,187 @@ import org.jline.consoleui.prompt.PromptResultItemIF;
 import org.jline.consoleui.prompt.builder.ListPromptBuilder;
 import org.jline.consoleui.prompt.builder.PromptBuilder;
 import org.jline.terminal.Terminal;
-import picocli.CommandLine;
 
+import java.io.IOException;
 import java.util.List;
 import java.util.Map;
 
 import static ai.wanaku.cli.main.support.CapabilitiesHelper.API_TIMEOUT;
 import static ai.wanaku.cli.main.support.CapabilitiesHelper.fetchAndMergeCapabilities;
-import static ai.wanaku.cli.main.support.CapabilitiesHelper.initializeTargetsService;
 import static ai.wanaku.cli.main.support.CapabilitiesHelper.printCapability;
+import static picocli.CommandLine.Command;
+import static picocli.CommandLine.Option;
+import static picocli.CommandLine.Parameters;
 
 /**
- * Command-line interface for displaying detailed information about a specific service capability.
+ * Command implementation for displaying detailed information about specific service capabilities.
  *
- * <p>This command allows users to view comprehensive details about a particular service in the
- * Wanaku system, including its configuration parameters, status, and connection information.
- * When multiple instances of the same service are found, it provides an interactive selection
- * interface to choose the specific instance to display.</p>
+ * <p>This command retrieves and displays comprehensive details about capabilities for a specified
+ * service. When multiple capabilities exist for the same service, it provides an interactive
+ * selection interface allowing users to choose which specific capability instance to examine.</p>
  *
- * <p>Key features:</p>
+ * <p>The command supports filtering capabilities by service name and handles various scenarios:</p>
  * <ul>
- *   <li>Displays detailed information for a specific service type</li>
- *   <li>Shows service configurations and parameters</li>
- *   <li>Handles multiple service instances with interactive selection</li>
- *   <li>Provides user-friendly error messages for missing services</li>
+ *   <li>No capabilities found - displays warning message</li>
+ *   <li>Single capability - directly shows detailed information</li>
+ *   <li>Multiple capabilities - presents interactive selection menu</li>
  * </ul>
  *
- * <p>Usage examples:</p>
- * <pre>
- * # Show details for HTTP service
+ * <p>Example usage:</p>
+ * <pre>{@code
  * wanaku capabilities show http
- *
- * # Show details for SQS service from specific host
- * wanaku capabilities show sqs --host http://api.example.com:8080
- * </pre>
- *
- * <p>Output includes:</p>
- * <ul>
- *   <li>Service summary table (service, type, host, port, status, lastSeen)</li>
- *   <li>Configuration details table (name, description)</li>
- * </ul>
+ * wanaku capabilities show --host http://remote:8080 sqs
+ * }</pre>
  *
  * @author Wanaku CLI Team
+ * @version 1.0
  * @since 1.0
- * @see ai.wanaku.cli.main.commands.capabilities.CapabilitiesList
- * @see CapabilitiesHelper
  */
-@CommandLine.Command(name = "show", description = "Show detailed information about a specific capability")
+@Command(name = "show", description = "Show detailed information about a specific capability")
 public class CapabilitiesShow extends BaseCommand {
 
     /**
-     * API host URL for connecting to the Wanaku services.
-     *
-     * <p>This option allows users to specify the base URL of the Wanaku API server.
-     * The URL should include the protocol (http/https) and port if different from default.</p>
-     *
-     * @see CapabilitiesList#host for more details on valid host formats
+     * Default API host URL used when no host is explicitly specified.
      */
-    @CommandLine.Option(
+    private static final String DEFAULT_HOST = "http://localhost:8080";
+
+    /**
+     * Format string for displaying capability choices in the selection menu.
+     * Displays service type, host, port, status, and last seen timestamp.
+     */
+    private static final String CAPABILITY_CHOICE_FORMAT = "%-20s  %-20s  %-5d  %-10s  %-45s";
+
+    /**
+     * Prompt name identifier used for the interactive capability selection.
+     */
+    private static final String SELECTION_PROMPT_NAME = "index";
+
+    /**
+     * The API host URL for connecting to the targets service.
+     * Defaults to localhost:8080 if not specified.
+     */
+    @Option(
             names = {"--host"},
-            description = "The API host URL (default: http://localhost:8080)",
-            defaultValue = "http://localhost:8080"
+            description = "The API host URL (default: " + DEFAULT_HOST + ")",
+            defaultValue = DEFAULT_HOST
     )
     private String host;
 
     /**
-     * The service name to display details for.
-     *
-     * <p>This parameter specifies which service type to show detailed information about.</p>
-     *
-     * <p>The service name is case-sensitive and must match exactly with the service
-     * types returned by the API.</p>
+     * The service name to show capability details for.
+     * Must be exactly one service name (e.g., "http", "sqs", "file").
      */
-    @CommandLine.Parameters(
+    @Parameters(
             description = "The service name to show details for (e.g., http, sqs, file)",
-            arity = "1..1")
+            arity = "1..1"
+    )
     private String service;
 
     /**
-     * REST client for communicating with the targets service API.
-     * Initialized during command execution.
+     * Service instance for interacting with the targets API.
+     * Initialized during command execution with the specified host configuration.
      */
     private TargetsService targetsService;
 
     /**
-     * Printer instance for formatted output display.
-     * Initialized during command execution.
-     */
-    private WanakuPrinter printer;
-
-    /**
-     * Executes the capability show command.
+     * Executes the capabilities show command.
      *
-     * <p>This method performs the following operations:</p>
+     * <p>This method orchestrates the entire capability retrieval and display process:</p>
      * <ol>
-     *   <li>Initializes the targets service and terminal</li>
-     *   <li>Fetches all capabilities and filters by the specified service</li>
-     *   <li>Handles different scenarios based on the number of matching capabilities:
-     *       <ul>
-     *         <li>No matches: Displays warning and exits with error</li>
-     *         <li>Single match: Displays capability details directly</li>
-     *         <li>Multiple matches: Prompts user to select specific instance</li>
-     *       </ul>
-     *   </li>
-     *   <li>Displays detailed capability information including configurations</li>
+     *   <li>Initializes the targets service with the specified host</li>
+     *   <li>Fetches all available capabilities from the API</li>
+     *   <li>Filters capabilities by the specified service name</li>
+     *   <li>Handles display based on the number of matching capabilities found</li>
      * </ol>
      *
-     * @return {@link BaseCommand#EXIT_OK} if successful, {@link BaseCommand#EXIT_ERROR} if no capabilities found
-     * @throws Exception if there's an error during execution, including:
-     *                  <ul>
-     *                    <li>API communication failures</li>
-     *                    <li>Terminal creation issues</li>
-     *                    <li>User interaction errors</li>
-     *                    <li>Data processing errors</li>
-     *                  </ul>
+     * @param terminal the terminal instance for user interaction
+     * @param printer the printer instance for formatted output
+     * @return {@link #EXIT_OK} on successful execution, {@link #EXIT_ERROR} on failure
+     * @throws IOException if an I/O error occurs during API communication or terminal interaction
+     * @throws Exception if any other error occurs during command execution
      */
     @Override
-    public Integer call() throws Exception {
-        targetsService = initializeTargetsService(host);
+    public Integer doCall(Terminal terminal, WanakuPrinter printer) throws IOException, Exception {
+        targetsService = initService(TargetsService.class, host);
 
-        try (Terminal terminal = WanakuPrinter.terminalInstance()) {
+        // Fetch and filter capabilities by service name
+        List<CapabilitiesHelper.PrintableCapability> capabilities = fetchAndMergeCapabilities(targetsService)
+                .await()
+                .atMost(API_TIMEOUT)
+                .stream()
+                .filter(capability -> capability.service().equals(service))
+                .toList();
 
-            printer = new WanakuPrinter(null, terminal);
-
-            // Fetch capabilities and filter by service name
-            var capabilities = fetchAndMergeCapabilities(targetsService)
-                    .await()
-                    .atMost(API_TIMEOUT)
-                    .stream()
-                    .filter(capability -> capability.service().equals(service))
-                    .toList();
-
-            // Handle different capability count scenarios
-            return switch (capabilities.size()) {
-                case 0 -> handleNoCapabilities();
-                case 1 -> handleSingleCapability(terminal, capabilities.get(0));
-                default -> handleMultipleCapabilities(terminal, capabilities);
-            };
-        }
+        // Handle different capability count scenarios using enhanced switch expression
+        return switch (capabilities.size()) {
+            case 0 -> handleNoCapabilities(printer);
+            case 1 -> handleSingleCapability(printer, capabilities.getFirst());
+            default -> handleMultipleCapabilities(terminal, printer, capabilities);
+        };
     }
 
     /**
-     * Handles the case when no capabilities are found for the specified service.
+     * Handles the scenario where no capabilities are found for the specified service.
      *
-     * @return {@link BaseCommand#EXIT_ERROR} to indicate failure
+     * @param printer the printer instance for formatted output
+     * @return {@link #EXIT_ERROR} to indicate no capabilities were found
+     * @throws IOException if an error occurs while printing the warning message
      */
-    private Integer handleNoCapabilities() {
+    private Integer handleNoCapabilities(WanakuPrinter printer) throws IOException {
         printer.printWarningMessage("No capabilities found for service: " + service);
         return EXIT_ERROR;
     }
 
     /**
-     * Handles the case when exactly one capability is found for the specified service.
+     * Handles the scenario where exactly one capability is found for the specified service.
+     * Directly displays the capability details without requiring user selection.
      *
-     * @param terminal the terminal instance for output
+     * @param printer the printer instance for formatted output
      * @param capability the single capability to display
-     * @return {@link BaseCommand#EXIT_OK} to indicate success
-     * @throws Exception if there's an error displaying the capability details
+     * @return {@link #EXIT_OK} on successful display
+     * @throws Exception if an error occurs while printing capability details
      */
-    private Integer handleSingleCapability(Terminal terminal, CapabilitiesHelper.PrintableCapability capability) throws Exception {
-        printCapabilityDetails(terminal, capability);
+    private Integer handleSingleCapability(WanakuPrinter printer,
+                                           CapabilitiesHelper.PrintableCapability capability) throws Exception {
+        printCapabilityDetails(printer, capability);
         return EXIT_OK;
     }
 
     /**
-     * Handles the case when multiple capabilities are found for the specified service.
+     * Handles the scenario where multiple capabilities are found for the specified service.
      *
-     * <p>This method presents an interactive selection interface allowing the user
-     * to choose which specific capability instance to display details for.</p>
+     * <p>Creates an interactive selection menu allowing the user to choose which specific
+     * capability instance to examine. The menu displays key information about each capability
+     * including service type, host, port, status, and last seen timestamp.</p>
      *
-     * @param terminal the terminal instance for output and user interaction
+     * @param terminal the terminal instance for user interaction
+     * @param printer the printer instance for formatted output
      * @param capabilities the list of capabilities to choose from
-     * @return {@link BaseCommand#EXIT_OK} if successful, {@link BaseCommand#EXIT_ERROR} if selection fails
-     * @throws Exception if there's an error during user interaction or display
+     * @return {@link #EXIT_OK} on successful selection and display, {@link #EXIT_ERROR} on failure
+     * @throws Exception if an error occurs during user interaction or capability display
      */
-    private Integer handleMultipleCapabilities(Terminal terminal, List<CapabilitiesHelper.PrintableCapability> capabilities) throws Exception {
-        printer.printWarningMessage("Multiple capabilities found for the " + service + " service. Please choose one.");
+    private Integer handleMultipleCapabilities(Terminal terminal,
+                                               WanakuPrinter printer,
+                                               List<CapabilitiesHelper.PrintableCapability> capabilities)
+            throws Exception {
 
-        String choicesFormat = "%-20s  %-20s  %-5d  %-10s  %-45s";
-        ConsolePrompt prompt = new ConsolePrompt(terminal);
+        printer.printWarningMessage("Multiple capabilities found for the " + service +
+                " service. Please choose one.");
+
+        ConsolePrompt.UiConfig uiConfig = new ConsolePrompt.UiConfig("=> ", "[]", "[x]", "-");
+        ConsolePrompt prompt = new ConsolePrompt(terminal, uiConfig);
+
         PromptBuilder builder = prompt.getPromptBuilder();
 
         // Create interactive selection prompt
         ListPromptBuilder listPromptBuilder = builder.createListPrompt()
-                .name("index")
+                .name(SELECTION_PROMPT_NAME)
                 .message("Select a capability instance:");
 
-        // Add each capability as a selectable option
+        // Add each capability as a selectable option with formatted display text
         for (int i = 0; i < capabilities.size(); i++) {
             CapabilitiesHelper.PrintableCapability capability = capabilities.get(i);
-
-
-            String displayText = String.format(choicesFormat,
-                    capability.serviceType(),
-                    capability.host(),
-                    capability.port(),
-                    capability.status(),
-                    capability.lastSeen());
+            String displayText = formatCapabilityChoice(capability);
 
             listPromptBuilder
                     .newItem(String.valueOf(i))
@@ -216,8 +200,8 @@ public class CapabilitiesShow extends BaseCommand {
 
         try {
             Map<String, PromptResultItemIF> result = prompt.prompt(builder.build());
-            int selectedIndex = Integer.parseInt(result.get("index").getResult());
-            printCapabilityDetails(terminal, capabilities.get(selectedIndex));
+            int selectedIndex = Integer.parseInt(result.get(SELECTION_PROMPT_NAME).getResult());
+            printCapabilityDetails(printer, capabilities.get(selectedIndex));
             return EXIT_OK;
         } catch (Exception e) {
             printer.printErrorMessage("Error during capability selection: " + e.getMessage());
@@ -226,21 +210,34 @@ public class CapabilitiesShow extends BaseCommand {
     }
 
     /**
-     * Displays detailed information about a specific capability.
+     * Formats a capability for display in the selection menu.
      *
-     * <p>This method outputs:</p>
-     * <ul>
-     *   <li>A summary table showing the capability's basic information</li>
-     *   <li>A configurations table showing the capability's configuration parameters</li>
-     * </ul>
-     *
-     * @param terminal the terminal instance for output
-     * @param capability the capability to display details for
-     * @throws Exception if there's an error during output formatting or display
+     * @param capability the capability to format
+     * @return formatted string containing service type, host, port, status, and last seen information
      */
-    private void printCapabilityDetails(Terminal terminal, CapabilitiesHelper.PrintableCapability capability) throws Exception {
+    private String formatCapabilityChoice(CapabilitiesHelper.PrintableCapability capability) {
+        return String.format(CAPABILITY_CHOICE_FORMAT,
+                capability.serviceType(),
+                capability.host(),
+                capability.port(),
+                capability.status(),
+                capability.lastSeen());
+    }
+
+    /**
+     * Prints comprehensive details for a selected capability.
+     *
+     * <p>Displays both the basic capability information and its associated configurations
+     * in a formatted table structure.</p>
+     *
+     * @param printer the printer instance for formatted output
+     * @param capability the capability whose details should be printed
+     * @throws Exception if an error occurs while printing the capability details or configurations
+     */
+    private void printCapabilityDetails(WanakuPrinter printer,
+                                        CapabilitiesHelper.PrintableCapability capability) throws Exception {
         printer.printInfoMessage("Capability Details:");
-        printCapability(capability, terminal);
+        printCapability(capability, printer);
 
         printer.printInfoMessage("\nConfigurations:");
         printer.printTable(capability.configurations(), "name", "description");
